# auction-house

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
programs/auction-house/: Cargo.toml
programs/auction-house/src/: access_controls.rs  account.rs  account_contexts.rs  account_data.rs  consts.rs  ctx.rs  error.rs  lib.rs
programs/auction-house/src/instructions/: calculate_clearing_price.rs  cancel_encrypted_order.rs  cancel_order.rs  close_aob_accounts.rs  consume_events.rs  decrypt_order.rs  init_auction.rs  init_open_orders.rs  match_orders.rs  mod.rs  new_encrypted_order.rs  new_order.rs  settle_and_close_open_orders.rs
programs/auction-house/src/program_accounts/: auction.rs  mod.rs  open_orders.rs  order_history.rs
programs/auction-house/src/types/: aob_bumps.rs  encrypted_order.rs  init_auction_args.rs  mod.rs  side.rs
src/components/: ConnectWalletButton.tsx  Modal.tsx
src/hooks/: useInterval.tsx  useIpAddress.tsx  useLocalStorageState.tsx  useMarket.tsx  useTokenAccounts.tsx  useWallet.tsx
src/pages/: _app.tsx  index.tsx
src/pages/admin/: [pk].tsx
src/pages/auction/: [pk].tsx
src/stores/: AuctionStore.tsx  ConnectionContext.tsx  ConnectionStore.tsx  NotificationStore.tsx  TokenStore.tsx  WalletStore.tsx
src/styles/: Home.module.css  globals.css
tests/: auction-house.ts  crank-tests.ts  cranks-tests.ts  stress-tests.ts
tests/sdk/: auction.ts  cranks.ts  index.ts  user.ts  utils.ts
