[package]
name = "auction-house"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
# Right now this will use whatever the latest commit is on the master branch.
# Later on we can force it to stick to a specific commit if needed
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-dependencies-from-git-repositories
agnostic-orderbook = {git = "https://github.com/Henry-E/agnostic-orderbook.git", features = ["no-entrypoint", "lib"]}

